# rism-online-docs

./: .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md  reconciliation.md
docs/api/: api-viewer.md  api.md  incipit-download.md  incipit-search.md  languages.md  modes.md  resource-api.md  search-api.md  sigla-api.md
docs/query-builder/: introduction.md
docs/reconciliation/: introduction.md  service.md
docs/stylesheets/: extra.css
