[tool.poetry]
name = "rism-online-docs"
version = "0.1.0"
description = ""
authors = ["Andrew Hankinson <andrew.hankinson@rism.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.2"
mkdocs-gitbook = "^0.0.1"
mkdocs-material = "^9.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
