[project]
name = "rism-online-docs"
version = "0.1.0"
description = ""
authors = [{ name = "Andrew Hankinson", email = "andrew.hankinson@rism.digital" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "mkdocs>=1.5.2,<2",
    "mkdocs-gitbook>=0.0.1,<0.0.2",
    "mkdocs-material>=9.1.21,<10",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
